--- a/src/Components/Pages/footer.css
+++ b/src/Components/Pages/footer.css
@@ -1,4 +1,8 @@
 .footer-main{
+  position: relative;
+  bottom: 0px;
+  right: 0px;
+  left: 0px;
     height: 150px;
     margin-top: 0px;
   background-image: url("./Assets/cool-background\ \(3\).png");
